fix: 修复 miniapp 发送按钮在回复后永久禁用的问题
根因：session.status:busy 事件设置 isStreaming=true 但不往
activeMessageIdsRef 添加 ID，后续 session.status:idle 调用
finalizeAllStreamingMessages 时因遍历空集合而无法执行
setIsStreaming(false)，导致输入框永远禁用。

修复：
- [前端] finalizeAllStreamingMessages 末尾增加兜底 setIsStreaming(false)
- [后端] GatewayRelayService 增加 completedSessions 缓存抑制
  tool_done 后乱序到达的 tool_event，防止前端 isStreaming 被
  错误重置为 true

其他改进：
- GatewayMessage 提取 Type 常量接口，消除全部魔法字符串
- ensureTraceId 集中到 GatewayMessage，移除 EventRelayService
  和 SkillRelayService 的重复实现
- AgentController 用 record DTO 替代 Map<String,Object>
- RedisConfig 线程池参数外提到 @Value 配置
- GatewayConfig allowedOrigins 可配置化
- AkSkAuthService constantTimeEquals 改用 MessageDigest.isEqual
- SnowflakeIdGenerator 忙等循环增加 LockSupport.parkNanos
- AgentRegistryService stale agent 清理改用 akId 作为 key